<resources>
    <string name="app_name">Food Sustainability Apps</string>
    <string name="ncpr">Rasio Konsumsi Normatif terhadap Produksi Bersih per Kapita adalah ...</string>
    <string name="pov">Penduduk Dibawah Garis Kemiskinan adalah ...</string>
    <string name="road">Desa tanpa Akses ke Jalan adalah ...</string>
    <string name="elec">Rumah Tangga tanpa Akses ke Listrik adalah ...</string>
    <string name="water">Rumah Tangga Tanpa Akses ke Air Bersih adalah ...</string>
    <string name="life">Angka Harapan Hidup adalah ...</string>
    <string name="flit">Perempuan Buta Huruf adalah ...</string>
    <string name="health">Rumah Tangga dengan Jarak >5 km dari Fasilitas Kesehatan adalah ...</string>
</resources>
