<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"

    android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"


            app:cardCornerRadius="10dp"
            app:cardElevation="1dp">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_more_info"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:tooltipText="@string/ncpr"/>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rasio Konsumsi Normatif terhadap Produksi Bersih per Kapita"
                    android:textSize="20dp"/>
                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="persentase">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputNcpr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"


            app:cardCornerRadius="10dp"
            app:cardElevation="1dp">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_more_info"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:tooltipText="@string/pov"/>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Penduduk Dibawah Garis Kemiskinan"
                    android:textSize="20dp"/>
                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="persentase">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputPov"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"


            app:cardCornerRadius="10dp"
            app:cardElevation="1dp">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_more_info"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:tooltipText="@string/road"/>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Desa tanpa Akses ke Jalan"
                    android:textSize="20dp"/>
                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="persentase">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputRoad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"


            app:cardCornerRadius="10dp"
            app:cardElevation="1dp">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_more_info"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:tooltipText="@string/elec"/>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rumah Tangga tanpa Akses ke Listrik"
                    android:textSize="20dp"/>
                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="persentase">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputElec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"


            app:cardCornerRadius="10dp"
            app:cardElevation="1dp">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_more_info"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:tooltipText="@string/water"/>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rumah Tangga Tanpa Akses ke Air Bersih"
                    android:textSize="20dp"/>
                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="persentase">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputWater"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"


            app:cardCornerRadius="10dp"
            app:cardElevation="1dp">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_more_info"
                android:layout_gravity="right"
                android:layout_margin="20dp"
                android:tooltipText="@string/life"/>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Angka Harapan Hidup"
                    android:textSize="20dp"/>
                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="persentase">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/inputLife"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"


            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_more_info"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:tooltipText="@string/flit"/>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Perempuan Buta Huruf"
                android:textSize="20dp"/>
            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="persentase">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputFlit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:background="#fff"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"


                app:cardCornerRadius="10dp"
                app:cardElevation="1dp">
                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_more_info"
                    android:layout_gravity="right"
                    android:layout_margin="20dp"
                    android:tooltipText="@string/health"/>
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rumah Tangga dengan Jarak >5 km dari Fasilitas Kesehatan"
                        android:textSize="20dp"/>
                    <android.support.design.widget.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="persentase">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/inputHealth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">
            <Button
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:text="Reset"
                android:background="@color/white"/>
            <Button
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:text="Prediksi"
                android:background="@color/colorPrimary"/></LinearLayout>



</LinearLayout>